<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/location_menu_id"
        android:icon="@drawable/ic_location"
        android:title="@string/set_location_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/schedule__menu_id"
        android:icon="@drawable/ic_baseline_calendar_today_24"
        android:title="@string/schedule_title"
        app:showAsAction="always" />

    <item
        android:id="@+id/info_menu_id"
        android:icon="@drawable/ic_program"
        android:title="@string/info_app"
        app:showAsAction="ifRoom" />

</menu>